update mainly elementar